--- a/example_code/download_with_python/big_import.ipynb
+++ b/example_code/download_with_python/big_import.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime_start_date = '2019-01-01'\n",
+    "crime_end_date = '2023-12-31'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "envcomplaint_start_date = '2019-01-01'\n",
+    "envcomplaint_end_date = '2023-12-31'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +157,8 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "1\n",
+      "2\n",
       "0\n",
       "0\n"
      ]
@@ -144,21 +166,21 @@
    ],
    "source": [
     "crime_params = (\n",
-    "            f\"$where=DATE%20BETWEEN%20%272023-01-01T00%3A00%3A00.000%27%20AND%20%272023-12-31T00%3A00%3A00.000%27\"\n",
+    "            f\"$where=DATE%20BETWEEN%20%27{crime_start_date}T00%3A00%3A00.000%27%20AND%20%27{crime_end_date}T23%3A59%3A59.000%27\"\n",
     "            f\"&$order=DATE\"\n",
     "            #f\"&$$app_token={token}\"\n",
     "            )\n",
     "\n",
-    "get_data('crime', 'ijzp-q8t2', 500000, crime_params)\n",
+    "get_data('crime5', 'ijzp-q8t2', 500000, crime_params)\n",
     "\n",
     "\n",
     "env_params = (\n",
-    "            f\"$where=complaint_date%20BETWEEN%20%272023-01-01T00%3A00%3A00.000%27%20AND%20%272023-12-31T00%3A00%3A00.000%27\"\n",
+    "            f\"$where=complaint_date%20BETWEEN%20%27{envcomplaint_start_date}T00%3A00%3A00.000%27%20AND%20%27{envcomplaint_end_date}T23%3A59%3A59.000%27\"\n",
     "            f\"&$order=complaint_date\"\n",
     "            #f\"&$$app_token={token}\"\n",
     "            )\n",
     "\n",
-    "get_data('envcomplaint', 'fypr-ksnz', 500000, env_params)\n",
+    "get_data('envcomplaint5', 'fypr-ksnz', 500000, env_params)\n",
     "\n",
     "offenders_params = (\n",
     "    f\"$where=block%20not%20like%20%27%25deport%25%27\"\n",
@@ -185,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
