--- a/example_code/etl/merge_example.ipynb
+++ b/example_code/etl/merge_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error on crime_chunk_0.json\n",
-      "error on envcomplaint_chunk_0.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "crimes_dict = {}\n",
     "offenders_dict = {}\n",
@@ -93,12 +84,12 @@
     "    elif name == 'offenders':\n",
     "        offenders_dict[name+f'_{offenders_i}'] = pd.read_json((data_path+file), lines=True)\n",
     "        # drop registered as homeless offenders\n",
-    "        offenders_dict[name+f'_{offenders_i}'] = offenders_dict[name+f'_{i}'][~(offenders_dict[name+f'_{i}']['block'] == '(registered as homeless)')]\n",
+    "        offenders_dict[name+f'_{offenders_i}'] = offenders_dict[name+f'_{offenders_i}'][~(offenders_dict[name+f'_{offenders_i}']['block'] == '(registered as homeless)')]\n",
     "        # replace anonymized house number with 0 (replaces X with 0)\n",
-    "        offenders_dict[name+f'_{offenders_i}']['block'] = offenders_dict[name+f'_{i}']['block'].str.replace('X','0') + ' CHICAGO'\n",
-    "        offenders_dict[name+f'_{offenders_i}'][['stnum','restofadd']] = offenders_dict[name+f'_{i}']['block'].str.split(\" \", n=1, expand=True)\n",
-    "        offenders_dict[name+f'_{offenders_i}']['stnum'] = offenders_dict[name+f'_{i}']['stnum'].astype(int) \n",
-    "        offenders_dict[name+f'_{offenders_i}']['fixed_addr'] = offenders_dict[name+f'_{i}']['stnum'].astype(str) + ' ' + offenders_dict[name+f'_{i}']['restofadd']\n",
+    "        offenders_dict[name+f'_{offenders_i}']['block'] = offenders_dict[name+f'_{offenders_i}']['block'].str.replace('X','0') + ' CHICAGO'\n",
+    "        offenders_dict[name+f'_{offenders_i}'][['stnum','restofadd']] = offenders_dict[name+f'_{offenders_i}']['block'].str.split(\" \", n=1, expand=True)\n",
+    "        offenders_dict[name+f'_{offenders_i}']['stnum'] = offenders_dict[name+f'_{offenders_i}']['stnum'].astype(int) \n",
+    "        offenders_dict[name+f'_{offenders_i}']['fixed_addr'] = offenders_dict[name+f'_{offenders_i}']['stnum'].astype(str) + ' ' + offenders_dict[name+f'_{i}']['restofadd']\n",
     "    elif name == 'envcomplaint5':\n",
     "        env_dict[name+f'_{env_i}'] = pd.read_json((data_path+file), lines=True)\n",
     "        env_i += 1\n",
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
