--- a/example_code/download_with_python/weatherdata.ipynb
+++ b/example_code/download_with_python/weatherdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,30 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs('./results', exist_ok=True )"
+    "os.makedirs('./weather_data', exist_ok=True )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Cannot load hourly/2019/KCGX0.csv.gz from https://bulk.meteostat.net/v2/\n",
-      "Warning: Cannot load hourly/2020/KCGX0.csv.gz from https://bulk.meteostat.net/v2/\n",
-      "Warning: Cannot load hourly/2021/KCGX0.csv.gz from https://bulk.meteostat.net/v2/\n",
-      "Warning: Cannot load hourly/2022/KCGX0.csv.gz from https://bulk.meteostat.net/v2/\n",
-      "Warning: Cannot load hourly/2023/KCGX0.csv.gz from https://bulk.meteostat.net/v2/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = dt.datetime(2019, 1, 1)\n",
     "end = dt.datetime(2023, 12, 31)\n",
@@ -58,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +175,7 @@
        "2019-01-05   5.0  -0.6  11.7   0.0   0.0  262.0  12.9   NaN  1011.8   NaN"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +358,7 @@
        "2019-01-05      53.06      30.92      41.00  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
