--- a/code_base/python/etl/merge_crime_offender_env.ipynb
+++ b/code_base/python/etl/merge_crime_offender_env.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../download_with_python/data/'\n",
+    "data_path = '../data/'\n",
     "cur_dir = os.getcwd()"
    ]
   },
