fixed merge for 311

--- a/code_base/python/etl/311_merge.ipynb
+++ b/code_base/python/etl/311_merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,41 +15,105 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tkkim\\AppData\\Local\\Temp\\ipykernel_38500\\2734616513.py:1: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  maindf = pd.read_csv('./results/5_years_311_merged.csv')\n"
+     ]
+    }
+   ],
    "source": [
-    "maindf = pd.read_csv('./etl/results/5_years.csv')"
+    "maindf = pd.read_csv('./results/5_years_311_merged.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherdf = pd.read_csv('./weather_data/weather_daily_data.csv')"
+    "maindf['created_date'] = pd.to_datetime(maindf['created_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "maindf['date'] = pd.to_datetime(maindf['date'])"
+    "grouped_date = maindf.groupby([maindf['created_date'].dt.date,'community_area','sr_type']).agg(total_count=('sr_number','count')).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherdf['time'] = pd.to_datetime(weatherdf['time'])"
+    "grouped_date.pivot_table(index=['created_date','community_area'],columns='sr_type',values='total_count',aggfunc='sum').fillna(0).reset_index().to_csv('./results/agged_311.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivoted = grouped_date.pivot_table(index=['created_date','community_area'],columns='sr_type',values='total_count',aggfunc='sum').fillna(0).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.read_csv('./results/5_years_merged_with_weather.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['date'] = pd.to_datetime(merged_df['date'])\n",
+    "pivoted['created_date'] = pd.to_datetime(pivoted['created_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigmerged = merged_df.merge(pivoted,how='left',left_on=[merged_df['date'].dt.date,'community_area'],right_on=[pivoted['created_date'].dt.date,'community_area'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigmerged.drop(['created_date', 'key_0'],axis=1,inplace=True)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigmerged.to_csv('./results/5_years_merged_with_weather_and_311.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -73,162 +137,215 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>tavg</th>\n",
-       "      <th>tmin</th>\n",
-       "      <th>tmax</th>\n",
-       "      <th>prcp</th>\n",
-       "      <th>snow</th>\n",
-       "      <th>wdir</th>\n",
-       "      <th>wspd</th>\n",
-       "      <th>wpgt</th>\n",
-       "      <th>pres</th>\n",
-       "      <th>tsun</th>\n",
-       "      <th>tempmax_f</th>\n",
-       "      <th>tempmin_f</th>\n",
-       "      <th>tempavg_f</th>\n",
+       "      <th>id</th>\n",
+       "      <th>case_number</th>\n",
+       "      <th>date</th>\n",
+       "      <th>block</th>\n",
+       "      <th>iucr</th>\n",
+       "      <th>primary_type</th>\n",
+       "      <th>description</th>\n",
+       "      <th>location_description</th>\n",
+       "      <th>arrest</th>\n",
+       "      <th>domestic</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Vicious Animal Complaint</th>\n",
+       "      <th>Wage Complaint</th>\n",
+       "      <th>Water Lead Test Kit Request</th>\n",
+       "      <th>Water Lead Test Visit Request</th>\n",
+       "      <th>Water On Street Complaint</th>\n",
+       "      <th>Water Quality Concern</th>\n",
+       "      <th>Water in Basement Complaint</th>\n",
+       "      <th>Weed Removal Request</th>\n",
+       "      <th>Wire Basket Request</th>\n",
+       "      <th>Yard Waste Pick-Up Request</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>13211437</td>\n",
+       "      <td>JG425074</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>-2.8</td>\n",
-       "      <td>2.2</td>\n",
+       "      <td>009XX N HAMLIN AVE</td>\n",
+       "      <td>1562</td>\n",
+       "      <td>SEX OFFENSE</td>\n",
+       "      <td>AGGRAVATED CRIMINAL SEXUAL ABUSE</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>342.0</td>\n",
-       "      <td>14.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1024.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.96</td>\n",
-       "      <td>26.96</td>\n",
-       "      <td>30.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2019-01-02</td>\n",
-       "      <td>-1.3</td>\n",
-       "      <td>-2.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>238.0</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>11895528</td>\n",
+       "      <td>JC515003</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>059XX W LELAND AVE</td>\n",
+       "      <td>1153</td>\n",
+       "      <td>DECEPTIVE PRACTICE</td>\n",
+       "      <td>FINANCIAL IDENTITY THEFT OVER $ 300</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1021.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>32.00</td>\n",
-       "      <td>26.96</td>\n",
-       "      <td>29.66</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2019-01-03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-3.9</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>18.3</td>\n",
+       "      <td>12325061</td>\n",
+       "      <td>JE180772</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>045XX S CHAMPLAIN AVE</td>\n",
+       "      <td>0265</td>\n",
+       "      <td>CRIMINAL SEXUAL ASSAULT</td>\n",
+       "      <td>AGGRAVATED - OTHER</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1017.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>41.00</td>\n",
-       "      <td>24.98</td>\n",
-       "      <td>32.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2019-01-04</td>\n",
-       "      <td>3.7</td>\n",
+       "      <td>12298601</td>\n",
+       "      <td>JE148751</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>057XX S WOLCOTT AVE</td>\n",
+       "      <td>1153</td>\n",
+       "      <td>DECEPTIVE PRACTICE</td>\n",
+       "      <td>FINANCIAL IDENTITY THEFT OVER $ 300</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>246.0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1009.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>32.00</td>\n",
-       "      <td>38.66</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2019-01-05</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>11.7</td>\n",
+       "      <td>12312332</td>\n",
+       "      <td>JE165297</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>009XX W 76TH ST</td>\n",
+       "      <td>0266</td>\n",
+       "      <td>CRIMINAL SEXUAL ASSAULT</td>\n",
+       "      <td>PREDATORY</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>262.0</td>\n",
-       "      <td>12.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1011.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53.06</td>\n",
-       "      <td>30.92</td>\n",
-       "      <td>41.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 136 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        time  tavg  tmin  tmax  prcp  snow   wdir  wspd  wpgt    pres  tsun  \\\n",
-       "0 2019-01-01  -0.7  -2.8   2.2   0.0   0.0  342.0  14.2   NaN  1024.1   NaN   \n",
-       "1 2019-01-02  -1.3  -2.8   0.0   0.3   0.0  238.0  15.0   NaN  1021.5   NaN   \n",
-       "2 2019-01-03   0.0  -3.9   5.0   0.0   0.0  223.0  18.3   NaN  1017.1   NaN   \n",
-       "3 2019-01-04   3.7   0.0  10.0   0.0   0.0  246.0  13.5   NaN  1009.1   NaN   \n",
-       "4 2019-01-05   5.0  -0.6  11.7   0.0   0.0  262.0  12.9   NaN  1011.8   NaN   \n",
+       "         id case_number       date                  block  iucr  \\\n",
+       "0  13211437    JG425074 2019-01-01     009XX N HAMLIN AVE  1562   \n",
+       "1  11895528    JC515003 2019-01-01     059XX W LELAND AVE  1153   \n",
+       "2  12325061    JE180772 2019-01-01  045XX S CHAMPLAIN AVE  0265   \n",
+       "3  12298601    JE148751 2019-01-01    057XX S WOLCOTT AVE  1153   \n",
+       "4  12312332    JE165297 2019-01-01        009XX W 76TH ST  0266   \n",
        "\n",
-       "   tempmax_f  tempmin_f  tempavg_f  \n",
-       "0      35.96      26.96      30.74  \n",
-       "1      32.00      26.96      29.66  \n",
-       "2      41.00      24.98      32.00  \n",
-       "3      50.00      32.00      38.66  \n",
-       "4      53.06      30.92      41.00  "
+       "              primary_type                          description  \\\n",
+       "0              SEX OFFENSE     AGGRAVATED CRIMINAL SEXUAL ABUSE   \n",
+       "1       DECEPTIVE PRACTICE  FINANCIAL IDENTITY THEFT OVER $ 300   \n",
+       "2  CRIMINAL SEXUAL ASSAULT                   AGGRAVATED - OTHER   \n",
+       "3       DECEPTIVE PRACTICE  FINANCIAL IDENTITY THEFT OVER $ 300   \n",
+       "4  CRIMINAL SEXUAL ASSAULT                            PREDATORY   \n",
+       "\n",
+       "  location_description  arrest  domestic  ...  Vicious Animal Complaint  \\\n",
+       "0            RESIDENCE   False     False  ...                       0.0   \n",
+       "1                  NaN   False     False  ...                       0.0   \n",
+       "2            RESIDENCE   False     False  ...                       NaN   \n",
+       "3            RESIDENCE   False     False  ...                       0.0   \n",
+       "4            RESIDENCE   False     False  ...                       0.0   \n",
+       "\n",
+       "   Wage Complaint  Water Lead Test Kit Request  Water Lead Test Visit Request  \\\n",
+       "0             0.0                          0.0                            0.0   \n",
+       "1             0.0                          1.0                            0.0   \n",
+       "2             NaN                          NaN                            NaN   \n",
+       "3             0.0                          0.0                            0.0   \n",
+       "4             0.0                          0.0                            0.0   \n",
+       "\n",
+       "  Water On Street Complaint  Water Quality Concern  \\\n",
+       "0                       0.0                    0.0   \n",
+       "1                       0.0                    0.0   \n",
+       "2                       NaN                    NaN   \n",
+       "3                       0.0                    0.0   \n",
+       "4                       0.0                    0.0   \n",
+       "\n",
+       "  Water in Basement Complaint  Weed Removal Request  Wire Basket Request  \\\n",
+       "0                         0.0                   0.0                  0.0   \n",
+       "1                         0.0                   0.0                  0.0   \n",
+       "2                         NaN                   NaN                  NaN   \n",
+       "3                         0.0                   0.0                  0.0   \n",
+       "4                         0.0                   0.0                  0.0   \n",
+       "\n",
+       "   Yard Waste Pick-Up Request  \n",
+       "0                         0.0  \n",
+       "1                         0.0  \n",
+       "2                         NaN  \n",
+       "3                         0.0  \n",
+       "4                         0.0  \n",
+       "\n",
+       "[5 rows x 136 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weatherdf.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df = pd.merge(maindf, weatherdf[['time','prcp','snow','tempmax_f', 'tempmin_f', 'tempavg_f']], how='left', left_on='date', right_on='time')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df.drop(['time'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df.to_csv('./etl/results/5_years_merged_with_weather.csv', index=False)"
+    "bigmerged.head()"
    ]
   }
  ],
